--- a/IMapp/templates/index.html
+++ b/IMapp/templates/index.html
@@ -107,12 +107,9 @@
                         <div class="menu menu-horizontal" data-reactid=".0.0:$main.4.$ChatHeader.1.$chatlist-header">
                             <span data-reactid=".0.0:$main.4.$ChatHeader.1.$chatlist-header.0"><div class="menu-item"
                                                                                                     data-reactid=".0.0:$main.4.$ChatHeader.1.$chatlist-header.0.$=11">
-                                <button class="icon icon-chat" data-ignore-capture="any" title="新建对话" src="/static/image/icon-chat">
-                                    <img src="/static/image/icon-chat" />
-{#
-
+                                <button class="icon icon-chat" data-ignore-capture="any" title="新建对话"
+                                        data-reactid=".0.0:$main.4.$ChatHeader.1.$chatlist-header.0.$=11.0">新建对话
                                 </button>
-
                             </div><div class="menu-item"
                                        data-reactid=".0.0:$main.4.$ChatHeader.1.$chatlist-header.0.$=12">
                                 <button class="icon icon-menu" data-ignore-capture="any" title="菜单"
@@ -150,14 +147,14 @@
                 <div class="intro-body" data-reactid=".0.0:$main.5.0">
                     <div class="intro-image" data-reactid=".0.0:$main.5.0.0"
                          style="opacity: 1; transform: scale(1);"></div>
-                    <div class="intro-text-container" data-reactid=".0.0:$main.5.0.1"
-                         style="opacity: 1; transform: translateY(0px);"><h1 class="intro-title"
-                                                                             data-reactid=".0.0:$main.5.0.1.0">
-                        保持手机连线</h1>
-                        <div class="intro-text" data-reactid=".0.0:$main.5.0.1.1">WhatsApp 网页版连接至您的手机来同步信息，请将手机连接至 Wi-Fi
-                            以减少移动数据的使用量。
-                        </div>
-                    </div>
+                    {#                    <div class="intro-text-container" data-reactid=".0.0:$main.5.0.1"#}
+                    {#                         style="opacity: 1; transform: translateY(0px);"><h1 class="intro-title"#}
+                    {#                                                                             data-reactid=".0.0:$main.5.0.1.0">#}
+                    {#                        保持手机连线</h1>#}
+                    {#                        <div class="intro-text" data-reactid=".0.0:$main.5.0.1.1">WhatsApp 网页版连接至您的手机来同步信息，请将手机连接至 Wi-Fi#}
+                    {#                            以减少移动数据的使用量。#}
+                    {#                        </div>#}
+                    {#                    </div>#}
                 </div>
             </div>
         </div>
